# cronolabs-toolkit

./: .gitignore  .markdownlint.jsonc  .pre-commit-config.yaml  LICENSE  README.md  pipeline.md  pyproject.toml  todo.md  todo.txt
backup/: clt-backup  clt-testbed.sh  help.txt
resource/: coffee.txt  commands.yaml  config  hosts.yaml
resource/bookstack/: .env  nginx.conf
resource/ghostty/: config
resource/nvim/: lazy-lock.json  lazyvim.json  nvim
resource/nvim/after/ftplugin/: indent.lua
resource/nvim/lua/config/: keymaps.lua  options.lua
resource/nvim/lua/plugins/: test.lua
resource/provision/: dnf-list.txt  flatpak-list.txt
resource/provision/debian/: baseline.sh  docker.sh  komodo.sh
resource/provision/nvim/: lazy-lock.json
resource/provision/nvim/after/ftplugin/: ruby.lua
resource/provision/nvim/lua/: ._plugins
resource/provision/nvim/lua/config/: keymaps.lua
resource/provision/template/: fedora-server-lxc-proxy.sh  fedora-server-lxc-wiki.sh
resource/provision/workstation/ghostty/: config
resource/provision/workstation/nvim/: lazy-lock.json  lazyvim.json
resource/template/: fedora-server-lxc-db.sh  fedora-server-lxc-proxy.sh  fedora-server-lxc-wiki.sh
resource/template/config/: backend-mapping.conf  postgresql.conf
resource/template/config/proxy/: backend-mapping.conf  site.conf  ssl-params.conf
resource/wezterm/: .wezterm.lua
src/clt/command/: env.py  list_provision_hosts.py
src/cronolabs_toolkit.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/cronolabs_toolkit/llama/: config.py  send.py
(+8 files in other folders)
